fixtures/valid/unresolved-dynamic-file-path-warning/src/core/public.ts
import fs from "node:fs";

export function readConfig(name: string): string {
  return fs.readFileSync(`data/${name}.json`, "utf8");
}
